--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "module": "./src/index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.js"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/webpack.prod.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.1",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
@@ -29,7 +31,6 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-overlays": "^4.1.1",
-    "styled-components": "^5.2.1"
+    "react-overlays": "^4.1.1"
   }
 }
