--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,15 +18,13 @@
     "noEmit": false, // 不输出(意思是不编译代码，只执行类型检查)
     "jsx": "react", // 在.tsx文件中支持JSX
     "sourceMap": true, // 生成相应的.map文件
-    "declaration": false, // 生成相应的.d.ts文件
+    "declaration": true, // 生成相应的.d.ts文件
     "noUnusedLocals": true, // 报告未使用的本地变量的错误
     "noUnusedParameters": true, // 报告未使用参数的错误
     "experimentalDecorators": true, // 启用对ES装饰器的实验性支持
     "incremental": true, // 通过从以前的编译中读取/写入信息到磁盘上的文件来启用增量编译
     "noFallthroughCasesInSwitch": true,
   },
-  "include": [
-    "src/**/*" // *** TypeScript文件应该进行类型检查 ***
-  ],
-  "exclude": ["node_modules", "build"] // *** 不进行类型检查的文件 ***
+  "exclude": ["node_modules", "build"], // *** 不进行类型检查的文件 ***
+  "files": ["src/index.ts", "src/components/Button/index.tsx", "src/components/Modal/index.tsx"],
 }
