--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "gulp": "^4.0.2",
+    "gulp-less": "^4.0.1",
+    "gulp-replace": "^1.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "html-webpack-plugin": "^4.5.1",
-    "less": "^4.1.1",
+    "less": "^3.0.2",
     "less-loader": "^8.0.0",
     "merge2": "^1.4.1",
     "style-loader": "^2.0.0",
