--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
     "gulp": "^4.0.2",
+    "gulp-header": "^2.0.9",
     "gulp-less": "^4.0.1",
     "gulp-replace": "^1.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
