--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5", // 指定 ECMAScript 版本
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ], // 要包含在编译中的依赖库文件列表
+    "lib": ["dom", "dom.iterable", "esnext"], // 要包含在编译中的依赖库文件列表
     "allowJs": true, // 允许编译 JavaScript 文件
     "skipLibCheck": true, // 跳过所有声明文件的类型检查
     "esModuleInterop": true, // 禁用命名空间引用 (import * as fs from "fs") 启用 CJS/AMD/UMD 风格引用 (import fs from "fs")
@@ -23,8 +19,14 @@
     "noUnusedParameters": true, // 报告未使用参数的错误
     "experimentalDecorators": true, // 启用对ES装饰器的实验性支持
     "incremental": true, // 通过从以前的编译中读取/写入信息到磁盘上的文件来启用增量编译
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules", "build"], // *** 不进行类型检查的文件 ***
-  "files": ["src/index.ts", "src/components/Button/index.tsx", "src/components/Modal/index.tsx"],
+  "files": [
+    "src/index.ts",
+    "src/components/Button/index.tsx",
+    "src/components/Modal/index.tsx",
+    "src/components/Dropdown/index.tsx",
+    "src/components/Menu/index.tsx"
+  ]
 }
