--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,6 @@
   "exclude": ["node_modules", "build"], // *** 不进行类型检查的文件 ***
   "files": [
     "src/index.ts",
-    "src/components/Button/index.tsx",
-    "src/components/Modal/index.tsx",
-    "src/components/Dropdown/index.tsx",
-    "src/components/Menu/index.tsx"
+    "src/components/*/index.tsx",
   ]
 }
