--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,12 @@
     "noUnusedParameters": true, // 报告未使用参数的错误
     "experimentalDecorators": true, // 启用对ES装饰器的实验性支持
     "incremental": true, // 通过从以前的编译中读取/写入信息到磁盘上的文件来启用增量编译
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "src"
   },
   "exclude": ["node_modules", "build"], // *** 不进行类型检查的文件 ***
   "files": [
     "src/index.ts",
-    "src/components/*/index.tsx",
+    "src/components/*/*.tsx",
   ]
 }
