--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "less": "^3.0.2",
     "less-loader": "^8.0.0",
     "merge2": "^1.4.1",
+    "react-docgen-typescript": "^1.21.0",
+    "react-styleguidist": "^11.1.5",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
